lint check UseValueOf